# Wildbook-infra

./: .env.example  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  README.md  docker-compose.ml.yml  docker-compose.yml
pipeline/: .env.example  Dockerfile  Dockerfile.airflow  Dockerfile.viz  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
pipeline/conf/base/: catalog.yml  logging.yml  parameters.yml
pipeline/dags/: wildbook_pipeline.py
pipeline/docs/: configuration.html  development.html  index.html  kedro-best-practices.html  kedro-catalog.html  kedro-deployment.html  kedro-pipelines.html  kedro-testing.html  production.html  structure.html  test-plan.md  whats-missing.html
pipeline/src/wildbook_pipeline/: __init__.py  __main__.py  settings.py
pipeline/src/wildbook_pipeline/pipelines/example/: __init__.py  nodes.py
pipeline/src/wildbook_pipeline/pipelines/identify/: nodes.py
pipeline/src/wildbook_pipeline/pipelines/identify_1010_coco/: __init__.py  nodes.py
pipeline/src/wildbook_pipeline/pipelines/identify_109/: __init__.py  nodes.py
pipeline/src/wildbook_pipeline/pipelines/new_ml/: _core.py  build_faiss.py  classify.py  detect.py  extract_clip.py  (+6 more)
pipeline/tests/: _metrics.py  conftest.py  test_pipelines.py
pipeline/tests/benchmark/: analyze.py  compare_1010.py  conftest.py  run_benchmark.py  runner.py
pipeline/tests/benchmark/coco/: __init__.py
pipeline/tests/benchmark/targets/: __init__.py
pipeline/tests/unit/: test_classify.py  test_core.py  test_extract_sift.py  test_load.py  test_store.py
(+205 files in other folders)
