[build-system]
requires = [
    "setuptools",
]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.10"
name = "wildbook_pipeline"
readme = "README.md"
dynamic = [
    "version",
]
dependencies = [
    "ipython>=8.10",
    "jupyterlab>=3.0",
    "notebook",
    "kedro~=1.4.0",
    "requests>=2.28",
]

[project.scripts]
pipeline = "wildbook_pipeline.__main__:main"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.version]
attr = "wildbook_pipeline.__version__"

[tool.setuptools.packages.find]
where = [
    "src",
]
namespaces = false

[tool.kedro]
package_name = "wildbook_pipeline"
project_name = "Wildbook Pipeline"
kedro_init_version = "1.4.0"
tools = "['None']"
example_pipeline = "False"
source_dir = "src"

[tool.kedro_telemetry]
project_id = "acc03f84e9c34aab90d9dd03d10304ea"
